# neuro-sym-model

./: .gitignore  README.md  config.yaml.example  main.py  pyproject.toml  run_tests.py  verify_instalation.py
benchmarks/: performance_test.py
docs/: estrutura-artigo-revisado.md  plano-correcoes-artigo.md  posicionamento-dilp.md  posicionamento-dlgn-petersen.md  posicionamento-ntp-deepproblog.md
examples/fraud_detection/: infer.py  train.py
examples/fraud_detection/data/: domain.csv  facts.csv  rules.txt
examples/socrates/: infer.py  train.py
examples/socrates/data/: domain.csv  facts.csv  rules.txt  test_facts.csv
experiments/: generate_evidence.py  reporting.py  run_multiseed.py
experiments/evidence/explainability_dlg_p13/: explainability_report.json  summary.md
experiments/evidence/fidelity_sparsity_p13/: report.json  summary.md
experiments/evidence/hinton_family/: config.json  derived_report.json  derived_summary.md  result.json  summary.md
experiments/evidence/kinship_proof_dag/: kinship_report.json  summary.md
experiments/evidence/pilot200_comparison/: comparison.md
experiments/evidence/pilot200_dlg/: result.json  summary.md
experiments/evidence/pilot200_ltn_baseline/: result.json  summary.md
experiments/evidence/pilot200_mlp_baseline/: result.json  summary.md
experiments/evidence/pilot3000_comparison/: comparison.md
experiments/evidence/pilot3000_dlg_long/: result.json  summary.md
experiments/evidence/pilot3000_mlp_baseline_long/: result.json  summary.md
experiments/evidence/softmax_comparison/: comparison.md  configs.json
experiments/evidence/softmax_dlg/: config.json  result.json  summary.md
experiments/evidence/softmax_mlp/: config.json  result.json  summary.md
experiments/evidence/sweep_comparison/: comparison.md
experiments/evidence/sweep_wd0.05/: config.json  result.json  summary.md
experiments/evidence/sweep_wd0.1/: config.json  result.json  summary.md
experiments/evidence/sweep_wd0.1_cap16x64/: config.json  result.json  summary.md
experiments/evidence/sweep_wd0.1_neg3/: config.json  result.json  summary.md
experiments/evidence/sweep_wd0.3/: config.json  result.json  summary.md
experiments/hinton_family/: domain.py  run_family.py
experiments/kinship/: domain.py  run_kinship.py
experiments/modular_addition/: axioms.py  dataset.py  evaluation.py  fidelity.py  run.py  run_explainability.py  run_fidelity_sparsity.py  run_pilot.py  run_pilot_long.py  run_softmax.py  run_sweep.py  softmax_formulation.py
src/: __init__.py
src/data_manager/: __init__.py  loader.py
src/explainability/: __init__.py  explainer.py
src/inference/: infer.py
src/interpreter/: fuzzy_operators.py  interpreter.py
src/logic/: test_logic.py
src/module/: __init__.py  factory.py  module.py  test_module.py
src/neurosym/: __init__.py
src/neurosym/data_manager/: loader.py
src/neurosym/explainability/: explainer.py  metrics.py
src/neurosym/inference/: infer.py
src/neurosym/interpreter/: __init__.py  fuzzy_operators.py  interpreter.py
src/neurosym/logic/: __init__.py  logic.py
src/neurosym/module/: __init__.py  factory.py  module.py
src/neurosym/tensor/: __init__.py  tensor.py
src/neurosym/training/: __init__.py  callbacks.py  metrics.py  optimizer.py  saver.py  trainer.py
src/tensor/: __init__.py  tensor.py  test_tensor.py
src/tensor/backend/: __init__.py  base.py  numpy_backend.py  (+1 more)
src/training/: __init__.py  callbacks.py  optimizer.py  train.py  trainer.py
test/: test_explainability_metrics.py  test_fidelity_sparsity.py  test_fuzzy_operators.py  test_hinton_family.py  test_interpreter.py  test_kinship_domain.py  test_logic.py  test_metrics.py  test_modular_addition.py  test_modular_addition_run.py  test_module.py  test_multiseed_runner.py  test_optimizer.py  test_softmax_formulation.py  test_tensor.py  test_trainer.py
(+3 files in other folders)
