# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-symbolic-core" # Nome atualizado para refletir a natureza de biblioteca
version = "0.1.0"
description = "Neuro-Symbolic Model from scratch"
authors = [
    {name = "Emanuel Firmino"},
]
keywords = ["neuro-symbolic", "logic", "tensor", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "numpy>=1.26.0", # <-- ADICIONAR NOVA DEPENDÊNCIA
]

[project.scripts]
test-tensor = "src.tensor.test_tensor:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
neurosym-infer = "neurosym.inference.infer:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.urls]
"Homepage" = "https://github.com/seu-usuario/neuro-sym-model"